# PersonalDevelopment

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.ps1  start.sh
package/ExteriorMirrorLibrary/: README.rst
package/ExteriorMirrorLibrary/adaptive_services/: IMirrorFoldService.hpp  MirrorFoldServiceProxy.cpp  MirrorFoldServiceProxy.hpp  MirrorFoldServicesSkeleton.cpp  MirrorFoldServicesSkeleton.hpp
package/ExteriorMirrorLibrary/config/: Control_Interface.hpp  mirrorConfiguration.hpp  mirrorParam.hpp
package/ExteriorMirrorLibrary/dataTypes/: InternalTypes.h  InternalTypes.hpp
package/ExteriorMirrorLibrary/docs/Arhitecture/: AdaptiveAutosarArhitectureFlow.rst  DockerContainerSharedMemory.rst
package/ExteriorMirrorLibrary/docs/SoftwareDetailDesign/: mirrorFrameless_sdd.rst
package/ExteriorMirrorLibrary/docs/SoftwareIntegrationTests/: mirrorFrameless_its.rst
package/ExteriorMirrorLibrary/docs/SoftwareRequirements/: mirrorFrameless_swr.rst  swr_attributes.rst
package/ExteriorMirrorLibrary/manifest/: Manifest.json  instance_manifest.json
package/ExteriorMirrorLibrary/service_consumer/: main_service_consumer.cpp
package/ExteriorMirrorLibrary/service_provider/: main_service_provider.cpp
package/ExteriorMirrorLibrary/src/: FramelessFold.c  FramelessFold.h  FramelessFoldControl.cpp  FramelessFoldControl.hpp  FramelessFoldController.cpp  FramelessFoldController.hpp  Mocks.cpp  NvMHandling.cpp  NvMHandling.hpp  PersistencyManager.cpp  PersistencyManager.hpp  main.cpp
